--- a/source/build-cmake/fp200/CMakeLists.txt
+++ b/source/build-cmake/fp200/CMakeLists.txt
@@ -27,6 +27,8 @@ set(VMFILES
 		   memory.cpp
 		   event.cpp
 )
+set(VMFILES_LIB
+)
 
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
