--- a/source/build-cmake/j3100gt/CMakeLists.txt
+++ b/source/build-cmake/j3100gt/CMakeLists.txt
@@ -20,19 +20,20 @@ set(WITH_JOYSTICK OFF)
 set(WITH_MOUSE ON)
 
 set(VMFILES
-		   hd46505.cpp
 		   i8237.cpp
 		   i8253.cpp
 		   i8259.cpp
+		   hd46505.cpp
 
-		   i86.cpp
 		   io.cpp
 		   disk.cpp
 		   
-		   pcm1bit.cpp
 		   upd765a.cpp
 		   
 		   event.cpp
+)
+set(VMFILES_LIB
+		   pcm1bit.cpp
 )
 
 set(BUILD_J3100GT ON  CACHE BOOL "Build emuJ3100GT")
@@ -63,15 +64,16 @@ elseif(BUILD_J3100SL)
   set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/j3100sl.qrc)
   add_definitions(-D_J3100SL)
   set(VMFILES ${VMFILES} 
-               i86.cpp 
+#               i86.cpp 
 	       rp5c01.cpp
 	       )
+set(FLAG_USE_I86 ON)
 elseif(BUILD_J3100SS)
   set(EXEC_TARGET emuj3100ss)
   set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/j3100ss.qrc)
   add_definitions(-D_J3100SS)
   set(VMFILES ${VMFILES} 
-               i86.cpp 
+#               i86.cpp 
 	       rp5c01.cpp
 	       )
 elseif(BUILD_J3100SE)
@@ -79,8 +81,9 @@ elseif(BUILD_J3100SE)
   set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/j3100se.qrc)
   add_definitions(-D_J3100SE)
   set(VMFILES ${VMFILES} 
-               i86.cpp 
+#               i86.cpp 
 	       rp5c01.cpp
 	       )
+set(FLAG_USE_I86 ON)
 endif()
 include(config_commonsource)
