--- a/source/build-cmake/pc100/CMakeLists.txt
+++ b/source/build-cmake/pc100/CMakeLists.txt
@@ -21,24 +21,23 @@ set(WITH_MOUSE ON)
 set(VMFILES
 		   i286.cpp
 		   
-		   and.cpp
-		   
-		   i8251.cpp
 		   i8255.cpp
 		   i8259.cpp
 		   
 		   msm58321.cpp
 		   upd765a.cpp
 		   
-		   beep.cpp
 		   memory.cpp
-		   pcm1bit.cpp
-		   
 		   disk.cpp
 		   event.cpp
 		   io.cpp
 )
-
+set(VMFILES_LIB
+		   and.cpp
+		   i8251.cpp
+		   beep.cpp
+		   pcm1bit.cpp
+)
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
