--- a/source/build-cmake/pc2001/CMakeLists.txt
+++ b/source/build-cmake/pc2001/CMakeLists.txt
@@ -26,11 +26,12 @@ set(VMFILES
 		   
 		   datarec.cpp
 		   memory.cpp
-		   pcm1bit.cpp
 
 		   event.cpp
 )
-
+set(VMFILES_LIB
+		   pcm1bit.cpp
+)
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
