--- a/source/build-cmake/px7/CMakeLists.txt
+++ b/source/build-cmake/px7/CMakeLists.txt
@@ -23,18 +23,20 @@ set(VMFILES_BASE
   z80.cpp
   tms9918a.cpp
 
-  not.cpp
   i8255.cpp
   
   ym2203.cpp
-  pcm1bit.cpp
-  
   #  
   datarec.cpp
   event.cpp
   io.cpp
   memory.cpp
 )
+set(VMFILES_LIB
+  pcm1bit.cpp
+  not.cpp
+)
+
 
 set(BUILD_PX7 ON CACHE BOOL "Build for Pioneer PX7")
 set(BUILD_MSX1 OFF CACHE BOOL "Build for MSX1")
