--- a/source/build-cmake/tk80bs/CMakeLists.txt
+++ b/source/build-cmake/tk80bs/CMakeLists.txt
@@ -28,9 +28,10 @@ set(VMFILES_BASE
 		   io.cpp
 		   memory.cpp
 
+)
+set(VMFILES_LIB
 		   pcm1bit.cpp
 )
-
 
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
