--- a/source/build-cmake/fm16pi/CMakeLists.txt
+++ b/source/build-cmake/fm16pi/CMakeLists.txt
@@ -23,13 +23,10 @@ set(WITH_MOUSE ON)
 set(VMFILES
 		   i286.cpp
 #
-		   pcm1bit.cpp
-		   i8251.cpp
 		   i8253.cpp
 		   i8255.cpp
 		   i8259.cpp
 		   msm58321.cpp
-		   not.cpp
 		   mb8877.cpp
 		   
 		   ym2203.cpp
@@ -41,6 +38,11 @@ set(VMFILES
 		   memory.cpp
 )
 
+set(VMFILES_LIB
+		   pcm1bit.cpp
+		   i8251.cpp
+		   not.cpp
+)
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
