[LIBNEWDEV][I8086] Apply to FM16pi, FM-R30, PC-100 and PC98HA.

--- a/source/build-cmake/fm16pi/CMakeLists.txt
+++ b/source/build-cmake/fm16pi/CMakeLists.txt
@@ -21,7 +21,7 @@ set(WITH_JOYSTICK OFF)
 set(WITH_MOUSE ON)
 
 set(VMFILES
-		   i286.cpp
+#		   i286.cpp
 #
 		   i8253.cpp
 		   i8255.cpp
@@ -43,6 +43,8 @@ set(VMFILES_LIB
 		   i8251.cpp
 		   not.cpp
 )
+
+set(FLAG_USE_I86 ON)
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
