--- a/source/build-cmake/pc100/CMakeLists.txt
+++ b/source/build-cmake/pc100/CMakeLists.txt
@@ -19,7 +19,7 @@ set(WITH_JOYSTICK OFF)
 set(WITH_MOUSE ON)
 
 set(VMFILES
-		   i286.cpp
+#		   i286.cpp
 		   
 		   i8255.cpp
 		   i8259.cpp
@@ -38,6 +38,8 @@ set(VMFILES_LIB
 		   beep.cpp
 		   pcm1bit.cpp
 )
+set(FLAG_USE_I86 ON)
+
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
