[GENERAL] Merge upstream 2017-02-09, but one-board-computers are not working yet.

--- a/source/src/vm/tk80bs/CMakeLists.txt
+++ b/source/src/vm/tk80bs/CMakeLists.txt
@@ -2,9 +2,17 @@ cmake_minimum_required (VERSION 2.6)
 
 message("* vm/tk80bs")
 
-add_library(vm_tk80bs
+set(VMFILES_TK
 	display.cpp
 	keyboard.cpp
-	cmt.cpp
+
+	membus.cpp
+#	memory.cpp
+)
+if(BUILD_TK80BS)
+   set(VMFILES_TK ${VMFILES_TK} cmt.cpp)
+endif()
+add_library(vm_tk80bs
+	${VMFILES_TK}
 	tk80bs.cpp
 )
