--- a/source/vc++2008/tk85.vcproj
+++ b/source/vc++2008/tk85.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="ys6464a"
+	Name="tk85"
 	ProjectGUID="{F62D036D-7569-431B-9C55-C056A4D3145A}"
-	RootNamespace="ys6464a"
+	RootNamespace="tk85"
 	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
@@ -43,17 +43,17 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\Debug/ys6464a.tlb"
+				TypeLibraryName=".\Debug/tk85.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_YS6464A"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_TK85"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
-				PrecompiledHeaderFile=".\Debug/ys6464a.pch"
+				PrecompiledHeaderFile=".\Debug/tk85.pch"
 				AssemblerListingLocation=".\Debug/"
 				ObjectFile=".\Debug/"
 				ProgramDataBaseFileName=".\Debug/"
@@ -76,11 +76,11 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="odbc32.lib odbccp32.lib winmm.lib imm32.lib"
-				OutputFile=".\Debug/ys6464a.exe"
+				OutputFile=".\Debug/tk85.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/ys6464a.pdb"
+				ProgramDatabaseFile=".\Debug/tk85.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -98,7 +98,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\Debug/ys6464a.bsc"
+				OutputFile=".\Debug/tk85.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -138,19 +138,19 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\Release/ys6464a.tlb"
+				TypeLibraryName=".\Release/tk85.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="2"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_YS6464A"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_TK85"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				EnableEnhancedInstructionSet="2"
-				PrecompiledHeaderFile=".\Release/ys6464a.pch"
+				PrecompiledHeaderFile=".\Release/tk85.pch"
 				AssemblerListingLocation=".\Release/"
 				ObjectFile=".\Release/"
 				ProgramDataBaseFileName=".\Release/"
@@ -172,10 +172,10 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="odbc32.lib odbccp32.lib winmm.lib imm32.lib"
-				OutputFile=".\Release/ys6464a.exe"
+				OutputFile=".\Release/tk85.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ProgramDatabaseFile=".\Release/ys6464a.pdb"
+				ProgramDatabaseFile=".\Release/tk85.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -193,7 +193,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\Release/ys6464a.bsc"
+				OutputFile=".\Release/tk85.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -468,6 +468,26 @@
 				Filter="cpp"
 				>
 				<File
+					RelativePath="..\src\vm\datarec.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PreprocessorDefinitions=""
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PreprocessorDefinitions=""
+						/>
+					</FileConfiguration>
+				</File>
+				<File
 					RelativePath="..\src\vm\event.cpp"
 					>
 					<FileConfiguration
@@ -488,7 +508,7 @@
 					</FileConfiguration>
 				</File>
 				<File
-					RelativePath="..\src\vm\i8255.cpp"
+					RelativePath="..\src\vm\i8080.cpp"
 					>
 					<FileConfiguration
 						Name="Debug|Win32"
@@ -508,7 +528,7 @@
 					</FileConfiguration>
 				</File>
 				<File
-					RelativePath="..\src\vm\io.cpp"
+					RelativePath="..\src\vm\i8255.cpp"
 					>
 					<FileConfiguration
 						Name="Debug|Win32"
@@ -567,33 +587,13 @@
 						/>
 					</FileConfiguration>
 				</File>
-				<File
-					RelativePath="..\src\vm\z80.cpp"
-					>
-					<FileConfiguration
-						Name="Debug|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-				</File>
 			</Filter>
 			<Filter
 				Name="VM Driver Source Files"
 				Filter="cpp"
 				>
 				<File
-					RelativePath="..\src\vm\ys6464a\display.cpp"
+					RelativePath="..\src\vm\tk80bs\display.cpp"
 					>
 					<FileConfiguration
 						Name="Debug|Win32"
@@ -613,7 +613,7 @@
 					</FileConfiguration>
 				</File>
 				<File
-					RelativePath="..\src\vm\ys6464a\keyboard.cpp"
+					RelativePath="..\src\vm\tk80bs\keyboard.cpp"
 					>
 					<FileConfiguration
 						Name="Debug|Win32"
@@ -633,7 +633,27 @@
 					</FileConfiguration>
 				</File>
 				<File
-					RelativePath="..\src\vm\ys6464a\ys6464a.cpp"
+					RelativePath="..\src\vm\tk80bs\membus.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PreprocessorDefinitions=""
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PreprocessorDefinitions=""
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath="..\src\vm\tk80bs\tk80bs.cpp"
 					>
 					<FileConfiguration
 						Name="Debug|Win32"
@@ -697,6 +717,14 @@
 				Filter="h"
 				>
 				<File
+					RelativePath="..\src\vm\datarec.h"
+					>
+				</File>
+				<File
+					RelativePath="..\src\vm\debugger.h"
+					>
+				</File>
+				<File
 					RelativePath="..\src\vm\device.h"
 					>
 				</File>
@@ -705,11 +733,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\src\vm\i8255.h"
+					RelativePath="..\src\vm\i8080.h"
 					>
 				</File>
 				<File
-					RelativePath="..\src\vm\io.h"
+					RelativePath="..\src\vm\i8255.h"
 					>
 				</File>
 				<File
@@ -724,25 +752,25 @@
 					RelativePath="..\src\vm\vm.h"
 					>
 				</File>
-				<File
-					RelativePath="..\src\vm\z80.h"
-					>
-				</File>
 			</Filter>
 			<Filter
 				Name="VM Driver Header Files"
 				Filter="h"
 				>
 				<File
-					RelativePath="..\src\vm\ys6464a\display.h"
+					RelativePath="..\src\vm\tk80bs\display.h"
 					>
 				</File>
 				<File
-					RelativePath="..\src\vm\ys6464a\keyboard.h"
+					RelativePath="..\src\vm\tk80bs\keyboard.h"
 					>
 				</File>
 				<File
-					RelativePath="..\src\vm\ys6464a\ys6464a.h"
+					RelativePath="..\src\vm\tk80bs\membus.h"
+					>
+				</File>
+				<File
+					RelativePath="..\src\vm\tk80bs\tk80bs.h"
 					>
 				</File>
 			</Filter>
@@ -756,11 +784,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a.ico"
+				RelativePath="..\src\res\tk85.ico"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a.rc"
+				RelativePath="..\src\res\tk85.rc"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -782,91 +810,111 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\board.png"
+				RelativePath="..\src\res\tk85\board.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button00.png"
+				RelativePath="..\src\res\tk85\button00.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button01.png"
+				RelativePath="..\src\res\tk85\button01.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button02.png"
+				RelativePath="..\src\res\tk85\button02.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button03.png"
+				RelativePath="..\src\res\tk85\button03.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button04.png"
+				RelativePath="..\src\res\tk85\button04.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button05.png"
+				RelativePath="..\src\res\tk85\button05.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button06.png"
+				RelativePath="..\src\res\tk85\button06.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button07.png"
+				RelativePath="..\src\res\tk85\button07.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button08.png"
+				RelativePath="..\src\res\tk85\button08.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button09.png"
+				RelativePath="..\src\res\tk85\button09.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button10.png"
+				RelativePath="..\src\res\tk85\button10.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button11.png"
+				RelativePath="..\src\res\tk85\button11.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button12.png"
+				RelativePath="..\src\res\tk85\button12.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button13.png"
+				RelativePath="..\src\res\tk85\button13.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button14.png"
+				RelativePath="..\src\res\tk85\button14.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button15.png"
+				RelativePath="..\src\res\tk85\button15.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button16.png"
+				RelativePath="..\src\res\tk85\button16.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button17.png"
+				RelativePath="..\src\res\tk85\button17.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button18.png"
+				RelativePath="..\src\res\tk85\button18.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button19.png"
+				RelativePath="..\src\res\tk85\button19.png"
 				>
 			</File>
 			<File
-				RelativePath="..\src\res\ys6464a\button20.png"
+				RelativePath="..\src\res\tk85\button20.png"
+				>
+			</File>
+			<File
+				RelativePath="..\src\res\tk85\button21.png"
+				>
+			</File>
+			<File
+				RelativePath="..\src\res\tk85\button22.png"
+				>
+			</File>
+			<File
+				RelativePath="..\src\res\tk85\button23.png"
+				>
+			</File>
+			<File
+				RelativePath="..\src\res\tk85\button24.png"
+				>
+			</File>
+			<File
+				RelativePath="..\src\res\tk85\button25.png"
 				>
 			</File>
 		</Filter>
