--- a/source/vc++2013/tk85.vcxproj
+++ b/source/vc++2013/tk85.vcxproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{F62D036D-7569-431B-9C55-C056A4D3145A}</ProjectGuid>
-    <RootNamespace>ex80</RootNamespace>
+    <RootNamespace>tk85</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -62,16 +62,16 @@
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TargetEnvironment>Win32</TargetEnvironment>
-      <TypeLibraryName>.\Debug/ex80.tlb</TypeLibraryName>
+      <TypeLibraryName>.\Debug/tk85.tlb</TypeLibraryName>
       <HeaderFileName />
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_EX80;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_TK85;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <PrecompiledHeaderOutputFile>.\Debug/ex80.pch</PrecompiledHeaderOutputFile>
+      <PrecompiledHeaderOutputFile>.\Debug/tk85.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>.\Debug/</AssemblerListingLocation>
       <ObjectFileName>.\Debug/</ObjectFileName>
       <ProgramDataBaseFileName>.\Debug/</ProgramDataBaseFileName>
@@ -86,10 +86,10 @@
     </ResourceCompile>
     <Link>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;imm32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>.\Debug/ex80.exe</OutputFile>
+      <OutputFile>.\Debug/tk85.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <ProgramDatabaseFile>.\Debug/ex80.pdb</ProgramDatabaseFile>
+      <ProgramDatabaseFile>.\Debug/tk85.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
@@ -98,7 +98,7 @@
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Debug/ex80.bsc</OutputFile>
+      <OutputFile>.\Debug/tk85.bsc</OutputFile>
     </Bscmake>
     <Manifest>
       <AdditionalManifestFiles>..\src\res\vista.manifest</AdditionalManifestFiles>
@@ -110,18 +110,18 @@
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TargetEnvironment>Win32</TargetEnvironment>
-      <TypeLibraryName>.\Release/ex80.tlb</TypeLibraryName>
+      <TypeLibraryName>.\Release/tk85.tlb</TypeLibraryName>
       <HeaderFileName />
     </Midl>
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_EX80;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_TK85;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
-      <PrecompiledHeaderOutputFile>.\Release/ex80.pch</PrecompiledHeaderOutputFile>
+      <PrecompiledHeaderOutputFile>.\Release/tk85.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>.\Release/</AssemblerListingLocation>
       <ObjectFileName>.\Release/</ObjectFileName>
       <ProgramDataBaseFileName>.\Release/</ProgramDataBaseFileName>
@@ -135,9 +135,9 @@
     </ResourceCompile>
     <Link>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;imm32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>.\Release/ex80.exe</OutputFile>
+      <OutputFile>.\Release/tk85.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <ProgramDatabaseFile>.\Release/ex80.pdb</ProgramDatabaseFile>
+      <ProgramDatabaseFile>.\Release/tk85.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
@@ -146,7 +146,7 @@
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Release/ex80.bsc</OutputFile>
+      <OutputFile>.\Release/tk85.bsc</OutputFile>
     </Bscmake>
     <Manifest>
       <AdditionalManifestFiles>..\src\res\vista.manifest</AdditionalManifestFiles>
@@ -165,17 +165,16 @@
     <ClCompile Include="..\src\win32\osd_screen.cpp" />
     <ClCompile Include="..\src\win32\osd_sound.cpp" />
     <ClCompile Include="..\src\win32\winmain.cpp" />
+    <ClCompile Include="..\src\vm\datarec.cpp" />
     <ClCompile Include="..\src\vm\event.cpp" />
     <ClCompile Include="..\src\vm\i8080.cpp" />
-    <ClCompile Include="..\src\vm\i8251.cpp" />
     <ClCompile Include="..\src\vm\i8255.cpp" />
-    <ClCompile Include="..\src\vm\io.cpp" />
+    <ClCompile Include="..\src\vm\memory.cpp" />
     <ClCompile Include="..\src\vm\pcm1bit.cpp" />
-    <ClCompile Include="..\src\vm\ex80\cmt.cpp" />
-    <ClCompile Include="..\src\vm\ex80\display.cpp" />
-    <ClCompile Include="..\src\vm\ex80\ex80.cpp" />
-    <ClCompile Include="..\src\vm\ex80\keyboard.cpp" />
-    <ClCompile Include="..\src\vm\ex80\memory.cpp" />
+    <ClCompile Include="..\src\vm\tk80bs\display.cpp" />
+    <ClCompile Include="..\src\vm\tk80bs\keyboard.cpp" />
+    <ClCompile Include="..\src\vm\tk80bs\membus.cpp" />
+    <ClCompile Include="..\src\vm\tk80bs\tk80bs.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\common.h" />
@@ -184,54 +183,53 @@
     <ClInclude Include="..\src\fileio.h" />
     <ClInclude Include="..\src\emu.h" />
     <ClInclude Include="..\src\win32\osd.h" />
+    <ClInclude Include="..\src\vm\datarec.h" />
     <ClInclude Include="..\src\vm\debugger.h" />
     <ClInclude Include="..\src\vm\device.h" />
     <ClInclude Include="..\src\vm\event.h" />
-    <ClInclude Include="..\src\vm\f9368.h" />
     <ClInclude Include="..\src\vm\i8080.h" />
-    <ClInclude Include="..\src\vm\i8251.h" />
     <ClInclude Include="..\src\vm\i8255.h" />
-    <ClInclude Include="..\src\vm\io.h" />
+    <ClInclude Include="..\src\vm\memory.h" />
     <ClInclude Include="..\src\vm\pcm1bit.h" />
     <ClInclude Include="..\src\vm\vm.h" />
-    <ClInclude Include="..\src\vm\ex80\cmt.h" />
-    <ClInclude Include="..\src\vm\ex80\display.h" />
-    <ClInclude Include="..\src\vm\ex80\ex80.h" />
-    <ClInclude Include="..\src\vm\ex80\keyboard.h" />
-    <ClInclude Include="..\src\vm\ex80\memory.h" />
+    <ClInclude Include="..\src\vm\tk80bs\display.h" />
+    <ClInclude Include="..\src\vm\tk80bs\keyboard.h" />
+    <ClInclude Include="..\src\vm\tk80bs\membus.h" />
+    <ClInclude Include="..\src\vm\tk80bs\tk80bs.h" />
     <ClInclude Include="..\src\res\resource.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\src\res\ex80.ico" />
-    <Image Include="..\src\res\ex80\board.png" />
-    <Image Include="..\src\res\ex80\button00.png" />
-    <Image Include="..\src\res\ex80\button01.png" />
-    <Image Include="..\src\res\ex80\button02.png" />
-    <Image Include="..\src\res\ex80\button03.png" />
-    <Image Include="..\src\res\ex80\button04.png" />
-    <Image Include="..\src\res\ex80\button05.png" />
-    <Image Include="..\src\res\ex80\button06.png" />
-    <Image Include="..\src\res\ex80\button07.png" />
-    <Image Include="..\src\res\ex80\button08.png" />
-    <Image Include="..\src\res\ex80\button09.png" />
-    <Image Include="..\src\res\ex80\button10.png" />
-    <Image Include="..\src\res\ex80\button11.png" />
-    <Image Include="..\src\res\ex80\button12.png" />
-    <Image Include="..\src\res\ex80\button13.png" />
-    <Image Include="..\src\res\ex80\button14.png" />
-    <Image Include="..\src\res\ex80\button15.png" />
-    <Image Include="..\src\res\ex80\button16.png" />
-    <Image Include="..\src\res\ex80\button17.png" />
-    <Image Include="..\src\res\ex80\button18.png" />
-    <Image Include="..\src\res\ex80\button19.png" />
-    <Image Include="..\src\res\ex80\button20.png" />
-    <Image Include="..\src\res\ex80\button21.png" />
-    <Image Include="..\src\res\ex80\button22.png" />
-    <Image Include="..\src\res\ex80\button23.png" />
-    <Image Include="..\src\res\ex80\button24.png" />
+    <Image Include="..\src\res\tk85.ico" />
+    <Image Include="..\src\res\tk85\board.png" />
+    <Image Include="..\src\res\tk85\button00.png" />
+    <Image Include="..\src\res\tk85\button01.png" />
+    <Image Include="..\src\res\tk85\button02.png" />
+    <Image Include="..\src\res\tk85\button03.png" />
+    <Image Include="..\src\res\tk85\button04.png" />
+    <Image Include="..\src\res\tk85\button05.png" />
+    <Image Include="..\src\res\tk85\button06.png" />
+    <Image Include="..\src\res\tk85\button07.png" />
+    <Image Include="..\src\res\tk85\button08.png" />
+    <Image Include="..\src\res\tk85\button09.png" />
+    <Image Include="..\src\res\tk85\button10.png" />
+    <Image Include="..\src\res\tk85\button11.png" />
+    <Image Include="..\src\res\tk85\button12.png" />
+    <Image Include="..\src\res\tk85\button13.png" />
+    <Image Include="..\src\res\tk85\button14.png" />
+    <Image Include="..\src\res\tk85\button15.png" />
+    <Image Include="..\src\res\tk85\button16.png" />
+    <Image Include="..\src\res\tk85\button17.png" />
+    <Image Include="..\src\res\tk85\button18.png" />
+    <Image Include="..\src\res\tk85\button19.png" />
+    <Image Include="..\src\res\tk85\button20.png" />
+    <Image Include="..\src\res\tk85\button21.png" />
+    <Image Include="..\src\res\tk85\button22.png" />
+    <Image Include="..\src\res\tk85\button23.png" />
+    <Image Include="..\src\res\tk85\button24.png" />
+    <Image Include="..\src\res\tk85\button25.png" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\src\res\ex80.rc">
+    <ResourceCompile Include="..\src\res\tk85.rc">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\src\res;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">..\src\res;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
