--- a/source/src/qt/emuutils/CMakeLists.txt
+++ b/source/src/qt/emuutils/CMakeLists.txt
@@ -10,25 +10,29 @@ set(s_qt_emuutils_srcs
 if(WIN32)
 include (GenerateExportHeader)
 
-add_library(emu_utils
-	  ${s_qt_emuutils_srcs}
-)
-#add_library(CSPemu_utils SHARED
+#add_library(emu_utils
 #	  ${s_qt_emuutils_srcs}
 #)
+add_library(CSPemu_utils SHARED
+	  ${s_qt_emuutils_srcs}
+)
 
-#target_link_libraries(CSPemu_utils PUBLIC
-#	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPosd/build-win32/qt/osd/CSPosd.dll
-#	  Qt5::Core
-#	  )
+target_link_libraries(CSPemu_utils PUBLIC
+	  Qt5::Core
+	  )
+set_target_properties(CSPemu_utils PROPERTIES
+			     SOVERSION 2.2.3
+			     VERSION 2.2.3
+			     LINK_INTERFACE_LIBRARIES ""
+			     )
 #QT5_USE_MODULES(CSPgui Widgets Core Gui OpenGL)
 #
-#generate_export_header(CSPemu_utils
-#        BASE_NAME CSPemu_utils
-#        EXPORT_MACRO_NAME CSPemu_utils_EXPORT
-#        EXPORT_FILE_NAME CSPemu_utils_Export.h
-#        STATIC_DEFINE CSPemu_utils_BUILT_AS_STATIC
-#)
+generate_export_header(CSPemu_utils
+        BASE_NAME CSPemu_utils
+        EXPORT_MACRO_NAME CSPemu_utils_EXPORT
+        EXPORT_FILE_NAME CSPemu_utils_Export.h
+        STATIC_DEFINE CSPemu_utils_BUILT_AS_STATIC
+)
 
 else()
 add_library(CSPemu_utils SHARED
