[VM][N5200] Fix FTBFS.

--- a/source/build-cmake/n5200/CMakeLists.txt
+++ b/source/build-cmake/n5200/CMakeLists.txt
@@ -22,7 +22,7 @@ set(WITH_JOYSTICK OFF)
 set(WITH_MOUSE ON)
 
 set(VMFILES_BASE
-                   i386.cpp
+#                  i386.cpp
 		   
 		   i8237.cpp
 		   i8253.cpp
@@ -41,7 +41,7 @@ set(VMFILES_LIB
 		   beep.cpp
 		   i8251.cpp
 )
-set(FLAG_USE_I386_VARIANTS OFF)
+set(FLAG_USE_I386_VARIANTS ON)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
 include(detect_target_cpu)
